[gd_scene load_steps=6 format=2]

[ext_resource path="res://art/mob.glb" type="PackedScene" id=1]
[ext_resource path="res://Mob.gd" type="Script" id=2]

[sub_resource type="BoxShape" id=1]
extents = Vector3( 0.145521, 0.192813, 0.244656 )

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Character:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0.476712, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ) ]
}

[sub_resource type="Animation" id=4]
resource_name = "float"
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Pivot/Character:translation")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0.2, 0.6 ),
"transitions": PoolRealArray( 2.54912, 0.466516 ),
"update": 0,
"values": [ Vector3( 0, 0.453736, 0 ), Vector3( 0, 0.677378, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Pivot/Character:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.3, 0.5, 0.7 ),
"transitions": PoolRealArray( 2.21914, 0.535887, 0.554785 ),
"update": 0,
"values": [ Vector3( 5.861, 0, 0 ), Vector3( 0.312001, 0, 0 ), Vector3( -8.719, 0, 0 ) ]
}

[node name="Mob" type="RigidBody" groups=["mobs"]]
collision_layer = 2
collision_mask = 0
script = ExtResource( 2 )

[node name="Pivot" type="Spatial" parent="."]

[node name="Character" parent="Pivot" instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.476712, 0 )

[node name="CollisionShape" type="CollisionShape" parent="."]
transform = Transform( 6.60354, 0, 0, 0, 1.78789, 0, 0, 0, 5.60641, -0.0993505, 0.6075, -0.129467 )
shape = SubResource( 1 )

[node name="VisibilityNotifier" type="VisibilityNotifier" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0412449, 0.585553, 0.465478 )
aabb = AABB( -1.02756, -0.537295, -1.44663, 2.05512, 1.12635, 2.89327 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "float"
anims/RESET = SubResource( 3 )
anims/float = SubResource( 4 )

[node name="NavigationAgent" type="NavigationAgent" parent="."]
avoidance_enabled = true

[node name="RayCast" type="RayCast" parent="."]

[connection signal="screen_exited" from="VisibilityNotifier" to="." method="_on_VisibilityNotifier_screen_exited"]
[connection signal="navigation_finished" from="NavigationAgent" to="." method="_on_NavigationAgent_navigation_finished"]
[connection signal="target_reached" from="NavigationAgent" to="." method="_on_NavigationAgent_target_reached"]
[connection signal="velocity_computed" from="NavigationAgent" to="." method="_on_NavigationAgent_velocity_computed"]
